Fixed color contrasting in about page

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -75,8 +75,8 @@ header nav a {
   padding: 10px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  background-color: var(--secondary-color);
-  color: var(--primary-color);
+  background-color: var(--accent2-color);
+  color: var(--text-color);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   margin: 20px 0;
 }
@@ -84,7 +84,7 @@ header nav a {
 .history h2 {
   grid-column: span 3;
   font-family: var(--heading-font);
-  color: var(--primary-color);
+  color: var(--text-color);
   text-align: center;
   margin-top: 5px;
   margin-bottom: -20px;
@@ -114,12 +114,13 @@ header nav a {
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   gap: 15px;
   padding: 20px;
-  background-color: var(--accent2-color);
-  color: var(--text-color);
+  background-color: var(--secondary-color);
+  color: var(--primary-color);
 }
 
 .adventures h2 {
   grid-column: span 5;
+  color: var(--primary-color);
   font-family: var(--heading-font);
   text-align: center;
   margin-bottom: 20px;
